# comp-critic-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
examples/: sample_critique.py
scripts/: test_query.py
src/comp_critic/: __init__.py  agent.py  config.py  ingest.py  tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_ingest.py  test_tools.py
thoughts/shared/research/: 2025-11-05-agentic-loop-breakdown.md  2025-11-05-chroma-connection-guide.md
